src/test/deca/context/valid/improvided/if_then_else_imbriq.deca
// Description :
// 	test d'un ifthenelse imbrique
// Resultats :
// 	ok
{
	if (true){
		print("Sana zen dl3alam");
	}
	else{
		if (false){
			println("Ahaaaa");
		}
		else{
			print("Ohoooo");	
		}
	}
}
