src/test/deca/context/invalid/improvided/print_bool.deca
// Description :
// 	Print un boolean 
// Resultats :
// 	Ligne 6 :
{
	println(true);
}
